Issue #3450773 by ahsannazir, Kanchan Bhogade, Gauravvvv, kostyashupenko, smustgrave: Olivero: Incorrect positioning of close button on mobile device when navigation module is enabled
(cherry picked from commit 77b8e596048aac5becd5646423d015858cb280c3)

--- a/core/themes/olivero/css/components/site-header.css
+++ b/core/themes/olivero/css/components/site-header.css
@@ -110,3 +110,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+/* Reset width set by layout.css */
+
+body.is-fixed .site-header__inner__container {
+  width: auto;
+}
